- https://github.com/eclipse-sirius/sirius-components/issues/959[#959] [diagram] Remove the concept of `DeleteTool`. This concept was not useful since any tool can perform a deletion

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/992[#992] [view] Let the `ViewValidator` consider statically contributed `EPackages` when validating domain types


== v2022.01.0

=== Architectural decision records

- [ADR-37] Add support for connector tool
- [ADR-38] Improve the layout of multiple edges between the same nodes

=== Deprecation warning
- https://github.com/eclipse-sirius/sirius-components/issues/858[#858] [core] Our dependency to Spring Security will be reduced or eliminated soon. Sirius Components will now longer have any opinion on matters of authentication, authorization, principal management, etc. All those concerns will be out of the scope of the project. It will also be way easier to integrate Sirius Components in a Spring based application since it won't come with this additional requirement

=== Breaking changes
- https://github.com/eclipse-sirius/sirius-components/issues/858[#858] [core] Remove most of the methods of `ISubscriptionManager` since they were not really useful
- https://github.com/eclipse-sirius/sirius-components/issues/871[#871] [core] Change the constructor of the `EditingContextEventProcessor` in order to let consumers provide an `IEditingContextEventProcessorExecutorServiceProvider`
- https://github.com/eclipse-sirius/sirius-components/issues/134[#134] [workbench] Switch from a single-selection API to a multi-selection API with some changes to the `Selection` object of the workbench
- https://github.com/eclipse-sirius/sirius-components/issues/878[#878] [core] As specified in the ADR-36, the kind of an object (representation, semantic elements, selection entry of the workbench) is now an URI. All previous kind values have been modified